Fix T49215